# AWS-Cert-Practice

./: .coderabbit.yaml  .env.example  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  EXECUTION_CHECKLIST.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  package.json  pnpm-lock.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backend/rust-api/: Cargo.toml  TABLES.md
backend/rust-api/src/: constants.rs  contracts.rs  main.rs  response.rs  tests.rs
backend/rust-api/src/routes/: config.rs  guest_session.rs  health.rs  mod.rs  version.rs
content/: README.md
content/CLF-C02/: README.md
content/SAA-C03/: README.md
infra/terraform/: .terraform.lock.hcl  README.md  alarms.tf  backend.tf  frontend.tf  locals.tf  outputs.tf  security.tf  variables.tf  versions.tf
scripts/: build-content.ts  build-lambda.sh  deploy-frontend.sh
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/progress/: page.tsx
src/app/review/: page.tsx
src/components/home/: home-cert.ts  home-client.tsx  index.ts
src/components/shell/: app-header-client.tsx  app-shell.tsx
src/components/study/: cert-page-header.tsx  (+4 more)
src/contracts/: api.ts
src/schemas/: aws-source-url.ts  concept.schema.ts  question.schema.ts
src/types/: concept.ts  progress.ts  question.ts  review.ts  shared.ts
tests/: api-client.test.ts  content-pipeline.test.ts  guest-session.test.ts  home-cert.test.ts  practice-question.test.ts  session-store.test.ts
(+24 files in other folders)
