[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_http = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
